# codebase-explainer

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/explainer/: __init__.py  agents.py  app.py  ingest.py  jobs.py  neo4j_client.py  parser.py  repo.py  settings.py
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/repos/[id]/: page.tsx
frontend/components/: Chat.tsx  Mermaid.tsx  Overview.tsx  RepoForm.tsx
frontend/lib/: api.ts
