[project]
name = "codebase-explainer"
version = "0.1.0"
description = "Multi-agent codebase onboarding tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "anthropic>=0.92.0",
    "neo4j>=5.23",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["explainer*"]
